Use java.net.http for GET request.